[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/title/TitleControlsGroup.tres" type="ButtonGroup" id=1]
[ext_resource path="res://ui/UITheme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/title/scene.gd" type="Script" id=3]
[ext_resource path="res://scenes/title/LoadPanel.gd" type="Script" id=4]

[node name="Title" type="Node"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleButtons" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/TitleButtons"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = -63.0
margin_right = 94.0
margin_bottom = -4.0
rect_min_size = Vector2( 90, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="MarginContainer" parent="CanvasLayer/TitleButtons/VBoxContainer"]
margin_right = 90.0
margin_bottom = 17.0
custom_constants/margin_right = 8

[node name="Button" type="Button" parent="CanvasLayer/TitleButtons/VBoxContainer/NewGame"]
margin_right = 82.0
margin_bottom = 17.0
toggle_mode = true
action_mode = 0
group = ExtResource( 1 )
text = "New Game"

[node name="LoadGame" type="MarginContainer" parent="CanvasLayer/TitleButtons/VBoxContainer"]
margin_top = 21.0
margin_right = 90.0
margin_bottom = 38.0
custom_constants/margin_right = 4
custom_constants/margin_left = 4

[node name="Button" type="Button" parent="CanvasLayer/TitleButtons/VBoxContainer/LoadGame"]
margin_left = 4.0
margin_right = 86.0
margin_bottom = 17.0
toggle_mode = true
action_mode = 0
group = ExtResource( 1 )
text = "Load Game"

[node name="Exit" type="MarginContainer" parent="CanvasLayer/TitleButtons/VBoxContainer"]
margin_top = 42.0
margin_right = 90.0
margin_bottom = 59.0
custom_constants/margin_left = 8

[node name="Button" type="Button" parent="CanvasLayer/TitleButtons/VBoxContainer/Exit"]
margin_left = 8.0
margin_right = 90.0
margin_bottom = 17.0
toggle_mode = true
action_mode = 0
group = ExtResource( 1 )
text = "Exit"

[node name="LoadPanel" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/LoadPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -50.0
margin_right = 90.0
margin_bottom = 50.0
rect_min_size = Vector2( 180, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="CanvasLayer/LoadPanel/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 176.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
auto_height = true
same_column_width = true
fixed_icon_size = Vector2( 24, 32 )

[connection signal="toggled" from="CanvasLayer/TitleButtons/VBoxContainer/NewGame/Button" to="." method="_on_newgame_toggled"]
[connection signal="toggled" from="CanvasLayer/TitleButtons/VBoxContainer/LoadGame/Button" to="." method="_on_loadgame_toggled"]
[connection signal="toggled" from="CanvasLayer/TitleButtons/VBoxContainer/Exit/Button" to="." method="_on_exit_toggled"]
[connection signal="item_activated" from="CanvasLayer/LoadPanel/PanelContainer/ItemList" to="CanvasLayer/LoadPanel" method="_on_ItemList_item_activated"]
